# getAbsolutelyDict

./: .gitignore  PLAN.md  README.md  pyproject.toml  requirements.txt
src/getdict/: app.py  audio.py  hotkeys.py  insertion.py  models.py  settings.py  transcription.py
src/getdict/ui/: settings_dialog.py  tray.py  visualizer.py
tests/: test_settings.py
