[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "getdict"
version = "0.1.0"
description = "GetDict desktop dictation assistant"
readme = "README.md"
authors = [{name = "GetDict"}]
requires-python = ">=3.9"
dependencies = [
    "PySide6>=6.6",
    "sounddevice>=0.4",
    "soundfile>=0.12",
    "numpy>=1.23",
    "pynput>=1.7",
    "openai>=1.6",
    "tenacity>=8.2",
    "pyperclip>=1.8",
    "platformdirs>=3.0",
    "pydantic>=2.0",
    "pyqtgraph>=0.13"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-qt>=4.3"
]

[project.scripts]
getdict = "getdict.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
